# mpkg

./: .gitignore  README  README.md
.github/workflows/: main.yml  release.yml
cli/: Cargo.toml  build.sh  install.ps1  install.sh  pkg.jsonc  server.js
cli/releases/linux-0.2.0/: install.sh  mpkg.d
cli/releases/windows-0.2.0/: install.sh  mpkg.d
cli/src/: main.rs
cli/tests/: integration_tests.rs
cli/wix/: main.wxs
registry/: Cargo.toml
registry/loader/latest/: mpkg-loader.mjs
registry/src/: accounts.rs  main.rs
registry/storage/fs/: index.js  package.json
registry/storage/loader/latest/: bootstrap.mjs
registry/views/: index.html  login.html  register.html
registry/website/: package-lock.json  package.json  server.js
registry/website/data/: users.json
registry/website/public/: style.css
registry/website/views/: index.ejs  layout.ejs  login.ejs  search.ejs  signup.ejs  upload.ejs
