[package]
name = "mpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
zip = "6.0.0"
flate2 = "1.1.5"
tar = "0.4.44"
walkdir = "2.5.0"
